--- a/.gitignore
+++ b/.gitignore
@@ -41,6 +41,7 @@ project.xcworkspace
 # node.js
 #
 node_modules/
+node_modules.tmp/
 npm-debug.log
 yarn-error.log
 default.realm/
@@ -161,6 +162,8 @@ conan.cmake
 # nix
 /.ran-setup
 /.nix-gcroots/
+**/node2nix/**/package.json
+/.m2~
 
 # modules
 status-modules/translations
