--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -27,6 +27,11 @@ targetSdkVersion=28
 buildToolsVersion=28.0.3
 supportLibVersion=28.0.0
 gradleBuildTools=com.android.tools.build:gradle:3.4.1
+googlePlayServicesVersion=16.0.1
+googlePlayServicesVisionVersion=17.0.2
+
+android.useAndroidX=true
+android.enableJetifier=true
 
 STATUS_RELEASE_STORE_FILE=~/.gradle/status-im.keystore
 STATUS_RELEASE_STORE_PASSWORD=password
