--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -1,6 +1,8 @@
 apply plugin: "com.android.application"
 
-apply from: project(':react-native-config').projectDir.getPath() + "/dotenv.gradle"
+if (project.gradle.startParameter.taskNames != ["clean"]) {
+  apply from: project(':react-native-config').projectDir.getPath() + "/dotenv.gradle"
+}
 
 import com.android.build.OutputFile
 import com.sun.org.apache.xalan.internal.xsltc.compiler.Copy
