fixup! Upgrade react-native to 0.60.5

--- a/ios/Podfile
+++ b/ios/Podfile
@@ -34,10 +34,13 @@ target 'StatusIm' do
   pod 'yoga', :path => '../node_modules/react-native/ReactCommon/yoga'
 
   # when removing svg pod, RCTImage is needed to be removed from React subspecs
-  pod 'RNSVG', :path => '../node_modules/react-native-svg'
   pod 'DoubleConversion', :podspec => '../node_modules/react-native/third-party-podspecs/DoubleConversion.podspec'
   pod 'glog', :podspec => '../node_modules/react-native/third-party-podspecs/glog.podspec'
   pod 'Folly', :podspec => '../node_modules/react-native/third-party-podspecs/Folly.podspec'
+
+  pod 'react-native-image-resizer', :path => '../node_modules/react-native-image-resizer'
+  pod 'SQLCipher', '~>3.0'
+  pod 'SSZipArchive'
 
   target 'StatusImTests' do
     inherit! :search_paths
