--- a/desktop/js_files/package.json
+++ b/desktop/js_files/package.json
@@ -18,6 +18,7 @@
     "modules/react-native-desktop-config/desktop",
     "modules/react-native-desktop-shortcuts/desktop",
     "modules/react-native-desktop-notification/desktop",
+    "modules/react-native-desktop-gesture-handler/desktop",
     "node_modules/google-breakpad"
   ],
   "desktopFonts": [
@@ -60,13 +61,14 @@
     "qrcode": "^1.4.1",
     "react": "16.6.1",
     "react-dom": "16.4.2",
-    "react-native": "git+https://github.com/status-im/react-native-desktop.git#v0.57.8_10",
+    "react-native": "git+https://github.com/status-im/react-native-desktop.git#master",
     "react-native-background-timer": "2.0.0",
     "react-native-camera": "0.10.0",
     "react-native-config": "git+https://github.com/status-im/react-native-config.git#v0.11.2-status",
     "react-native-dialogs": "0.0.20",
     "react-native-fetch-polyfill": "1.1.2",
     "react-native-fs": "git+https://github.com/status-im/react-native-fs.git#v2.9.7-status",
+    "react-native-gesture-handler": "^1.3.0",
     "react-native-image-crop-picker": "0.18.1",
     "react-native-image-resizer": "1.0.0",
     "react-native-keychain": "git+https://github.com/status-im/react-native-keychain.git#v.3.0.0-4-status",
@@ -75,7 +77,7 @@
     "react-native-os": "1.1.0",
     "react-native-splash-screen": "3.0.6",
     "react-native-webview-bridge": "git+https://github.com/status-im/react-native-webview-bridge.git#0.33.16-status-rn049-desktop",
-    "react-navigation": "^2.12.1",
+    "react-navigation": "^3.11.0",
     "status-conan": "git+https://github.com/status-im/status-conan.git#v1.0.0",
     "web3-utils": "1.0.0-beta.36"
   },
