--- a/mobile/js_files/package.json
+++ b/mobile/js_files/package.json
@@ -24,17 +24,17 @@
     "react-native-camera": "^3.3.3",
     "react-native-config": "git+https://github.com/status-im/react-native-config.git#0.11.2-1-status",
     "react-native-dialogs": "^1.0.4",
-    "react-native-fetch-polyfill": "^1.1.2",
+    "react-native-fetch-polyfill": "^1.1.3",
     "react-native-firebase": "^5.5.6",
     "react-native-fs": "^2.14.1",
     "react-native-gesture-handler": "^1.3.0",
     "react-native-image-crop-picker": "^0.25.0",
-    "react-native-image-resizer": "git+https://github.com/status-im/react-native-image-resizer.git#1.0.0-1-status",
+    "react-native-image-resizer": "git+https://github.com/status-im/react-native-image-resizer.git#1.0.0",
     "react-native-keychain": "git+https://github.com/status-im/react-native-keychain.git#v.3.0.0-status",
     "react-native-languages": "^3.0.2",
     "react-native-mail": "git+https://github.com/status-im/react-native-mail.git#v4.0.0-status",
     "react-native-navigation-twopane": "git+https://github.com/status-im/react-native-navigation-twopane.git#v0.0.2-status",
-    "react-native-screens": "^1.0.0-alpha.22",
+    "react-native-screens": "^2.0.0-alpha.3",
     "react-native-shake": "^3.3.1",
     "react-native-splash-screen": "^3.2.0",
     "react-native-status-keycard": "^2.5.12",
@@ -42,7 +42,7 @@
     "react-native-touch-id": "^4.4.1",
     "react-native-webview": "^6.11.1",
     "react-native-webview-bridge": "git+https://github.com/status-im/react-native-webview-bridge.git#fix/community-webview",
-    "react-navigation": "^3.11.0",
+    "react-navigation": "^4.0.10",
     "web3-utils": "^1.2.1"
   },
   "devDependencies": {
