--- a/mobile/js_files/package.json
+++ b/mobile/js_files/package.json
@@ -13,6 +13,7 @@
     "create-react-class": "^15.6.2",
     "emojilib": "^2.4.0",
     "eth-phishing-detect": "^1.1.13",
+    "etherscan-api": "^10.0.5",
     "functional-red-black-tree": "^1.0.1",
     "hermes-engine": "0.2.1",
     "hi-base32": "^0.5.0",
